--- a/README
+++ b/README
@@ -9,7 +9,7 @@ To test:
 
 Server:
 Server is responsible for the hosting scene to the clients and for the creating the entity which serves offsets to the clients' cameras.
-In this example server's ip-address is "192.168.1.10", port is "2345", scene file is "scene.txml" and Apache HTTP Server is used to share scene directory (<DocumentRoot>/DemoScene/) to the clients.
+Let's say that server's ip-address is "192.168.1.10", port is "2345", scene file is "scene.txml" and Apache HTTP Server is used to share scene directory (<DocumentRoot>/DemoScene/) to the clients.
 - make scene directory available for the client machines 
     * edit Apache httpd.conf file: 
       <Directory "<DocumentRoot>/DemoScene"> 
